--- a/style.css
+++ b/style.css
@@ -15,8 +15,18 @@ h1 {
 }
 button {
 	font-family: "JetBrains Mono Light";
-	border-radius: 20%;
-	border: midnightblue;
-	background-color: midnightblue;
+	border-radius: 20px;
+	border: none;
+	transition-duration: 0.5s;
+	background-color: #101521;
+	padding: 5px 10px;
 	color: lightgray;
+	/* text-align: center; */
+}
+
+button:hover {
+	background-color: midnightblue;
+	box-shadow: 0 12px 16px 0 rgba(0, 0, 0, 0.24),
+		0 17px 50px 0 rgba(0, 0, 0, 0.19);
+	cursor: pointer;
 }
