--- a/style.css
+++ b/style.css
@@ -3,6 +3,9 @@ body {
 	text-align: center;
 	color: #666;
 	font-family: "JetBrains Mono Light";
+	display: flex;
+	min-height: 100vh;
+	flex-direction: column;
 }
 
 h1,
@@ -29,4 +32,8 @@ button:hover {
 	box-shadow: 0 12px 16px 0 rgba(0, 0, 0, 0.24),
 		0 17px 50px 0 rgba(0, 0, 0, 0.19);
 	cursor: pointer;
+}
+
+main {
+	flex: 1 0 auto;
 }
