Added basic html, css and javascript

--- a/style.css
+++ b/style.css
@@ -1,14 +1,65 @@
-body {
-	background-color: #fafafa;
-	text-align: center;
-	color: #000000;
-	/* font-family: "JetBrains Mono"; */
-	display: flex;
-	min-height: 100vh;
-	flex-direction: column;
+* { /* prevent text selection */
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
 h1 {
-	color: navy;
-	/* font: "JetBrains Mono"; */
+  text-align: center;
+  width: 10ch;
+  animation: typing 1s steps(10), blink .5s step-end infinite alternate;
+  white-space: nowrap;
+  overflow: hidden;
+  border-right: 3px solid;
+  font-family: monospace;
+  font-size: 2em;
+}
+
+@keyframes typing {
+  from {
+    width: 0
+  }
+}
+    
+@keyframes blink {
+  50% {
+    border-color: transparent
+  }
+}
+
+ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  background-color: #333;
+}
+
+li {
+  float: left;
+  display: inline;
+}
+
+li a {
+  display: block;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  color: white;
+}
+
+.active {
+  background-color: green;
+}
+
+.active:hover {
+  background-color: darkgreen;
+}
+
+li a:hover {
+  background-color: #111;
 }
