--- a/style.css
+++ b/style.css
@@ -1,65 +1,109 @@
-* { /* prevent text selection */
-  -webkit-touch-callout: none;
-  -webkit-user-select: none;
-  -khtml-user-select: none;
-  -moz-user-select: none;
-  -ms-user-select: none;
-  user-select: none;
-  font-family: Arial, Helvetica, sans-serif;
+* {
+    /* prevent text selection */
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
-h1 {
-  text-align: center;
-  width: 10ch;
-  animation: typing 1s steps(10), blink .5s step-end infinite alternate;
-  white-space: nowrap;
-  overflow: hidden;
-  border-right: 3px solid;
-  font-family: monospace;
-  font-size: 2em;
+.write_slowly {
+    text-align: center;
+    width: 10ch;
+    animation: typing 1s steps(10), blink .5s step-end infinite alternate;
+    white-space: nowrap;
+    overflow: hidden;
+    border-right: 3px solid;
+    font-family: monospace;
+    font-size: 2em;
 }
 
 @keyframes typing {
-  from {
-    width: 0
-  }
+    from {
+        width: 0
+    }
 }
-    
+
 @keyframes blink {
-  50% {
-    border-color: transparent
-  }
+    50% {
+        border-color: transparent
+    }
 }
 
 ul {
-  list-style-type: none;
-  margin: 0;
-  padding: 0;
-  overflow: hidden;
-  background-color: #333;
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    background-color: #333;
 }
 
 li {
-  float: left;
-  display: inline;
+    float: left;
+    display: inline;
 }
 
 li a {
-  display: block;
-  text-align: center;
-  padding: 14px 16px;
-  text-decoration: none;
-  color: white;
+    display: block;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    color: white;
 }
 
 .active {
-  background-color: green;
+    background-color: green;
 }
 
 .active:hover {
-  background-color: darkgreen;
+    background-color: darkgreen;
 }
 
 li a:hover {
-  background-color: #111;
+    background-color: #111;
+}
+
+
+/* ++++++++++++++++++++++++++++[>+++<-]>.+++++++++++++++++.++++++++++++++.+..... */
+
+textarea {
+    resize: none;
+    word-wrap: unset;
+    width: 100%;
+    height: 150px;
+    padding: 12px 20px;
+    box-sizing: border-box;
+    border: 2px solid #6cc;
+    border-radius: 10px;
+    background-color: #e8e8e8;
+    font-size: 16px;
+}
+
+button {
+    display: inline-block;
+    padding: 0.3em 1.2em;
+    margin: 0 0.1em 0.1em 0;
+    border: 0.16em solid rgba(255, 255, 255, 0);
+    border-radius: 2em;
+    box-sizing: border-box;
+    text-decoration: none;
+    font-weight: 400;
+    font-size: large;
+    color: #FFFFFF;
+    text-align: center;
+    transition: all 0.5s;
+    background-color: #4e9af1;
+    /* position: absolute; */
+    /* left: 50%; */
+    width: 50%;
+}
+
+button:hover {
+    border-color: #ffffff;
+}
+
+.exec_btn_div {
+    text-align: center;
 }
