Updated all_projects page

--- a/templates/all_projects.html
+++ b/templates/all_projects.html
@@ -9,7 +9,7 @@
             Back to Home
         </a>
         <h1 class="text-4xl font-bold text-white mb-6 tracking-tight">All Projects</h1>
-        <p class="text-slate-400 text-lg mb-8">A comprehensive list of my software engineering endeavors.</p>
+	<p class="text-slate-400 text-lg mb-8">A list of my public software and hardware projects.<br/>Based on my <a href="{{ config.extra.github }}?tab=repositories" class="inline-flex items-center gap-2 text-indigo-400 hover:text-indigo-300 text-sm mb-8 transition-colors group">GitHub repositories</a>.</p>
         <div id="filter-container" class="flex flex-wrap gap-2"></div>
     </div>
 
